feat: epic 4 story 1
